--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<tr><td class="table_tit">生日日期:</td><td>1994/5/20</td></tr>
 							<tr><td class="table_tit">地址：</td><td>北京市昌平区</td></tr>
 							<tr><td class="table_tit">手机号码：</td><td>15032164461</td></tr>
-							<tr><td class="table_tit">邮箱：</td><td>653486575@qq.com</td></tr>
+							<tr><td class="table_tit">邮箱：</td><td>lianghuan94@126.com</td></tr>
 						</table>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 				<div class="box_content" id="box_content">
 					<ul class="js_con_con" id="js_con_con">
 						<li class="js_tab_li1">
-							<a href="#" target="_blank">
+							<a href="mo_fy/fk_yd/design.html" target="_blank">
 								<span class="shadow">分块运动</span>
 								<img src="images/mo_qc.jpg"/>
 							</a>
@@ -94,7 +94,7 @@
 							</a>
 						</li>
 						<li class="js_tab_li1">
-							<a href="mo_fy/zd_bf/index.html"  target="_blank">
+							<a href="mo_fy/zd_bf/main.html"  target="_blank">
 								<span class="shadow">自动播放选项卡</span>
 								<img src="images/mo_qt.jpg"/>
 							</a>
@@ -129,7 +129,7 @@
 					</a>
 				</li>
                 <li class="open">
-					<a href="css3/"  target="_blank">
+					<a href="css3/3Dxz-q/3Dpic_ring.html"  target="_blank">
 						<span>3D图片翻转</span>
 					</a>
 				</li>
@@ -139,7 +139,7 @@
 					</a>
 				</li>
                 <li class="magic">
-					<a href="css3/"  target="_blank">
+					<a href="css3/3d_rect/rect.html"  target="_blank">
 						<span>3D魔方</span>
 					</a>
 				</li>
@@ -206,10 +206,10 @@
 						</a>
 					</li>
 					<li>
-						<a href="station/OPPO/oppo.html" target="_blank">
+						<a href="station/myWish/index.html" target="_blank">
 							<div class="demo_box_content">
 								<p class="demo_box_hover" id="demo_box_hover">
-									<span class="demo_box_title">oppo官网</span>
+									<span class="demo_box_title">许愿墙</span>
 									<i></i>
 								</p>
 								<img src="images/mo_jing.jpg"/>
