--- a/css3/3Dclock/clock.html
+++ b/css3/3Dclock/clock.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>可拖拽时钟</title>
 <style>
 	*{padding: 0; margin: 0;}
 	body{ background: url(images/back.jpg);}
