--- a/css3/3Dfk_yd/design.html
+++ b/css3/3Dfk_yd/design.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>3D爆炸、翻页</title>
 <style>
 * { margin:0; padding:0; }
 body{ background:url(img/back.jpg) no-repeat;overflow: hidden;}
