--- a/css3/3Dxg_q/photo.html
+++ b/css3/3Dxg_q/photo.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>3D转换</title>
 <style>
 *{ padding:0; margin:0; list-style:none;}
 body{ background:url(images/back.jpg) no-repeat; text-align:center;}
