--- a/station/Echo of soul/Echo.html
+++ b/station/Echo of soul/Echo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>无标题文档</title>
+<title>灵魂回响</title>
 <link rel="stylesheet" href="css/base.css"/>
 <link rel="stylesheet" href="css/index.css"/>
 <script src="js/style.js"></script>
