--- a/station/wedding photo/dress.html
+++ b/station/wedding photo/dress.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>无标题文档</title>
+<title>婚纱摄影</title>
 <link rel="stylesheet" href="css/base.css"/>
 <link rel="stylesheet" href="css/main.css"/>
 
