--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					</a>
 				</li>
                 <li class="motion">
-					<a href="css3/3Dfk_yd/design.html"  target="_blank">
+					<a href="css3/photo_bz/bz.html"  target="_blank">
 						<span>3D分块运动</span>
 					</a>
 				</li>
