--- a/css3/photo_bz/bz.html
+++ b/css3/photo_bz/bz.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-<meta charset="UTF-8">
-<title>3D爆炸、翻页</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>爆破、翻页、颗粒块</title>
 <style>
-* { margin:0; padding:0; }
-body{ background:url(img/back.jpg) no-repeat;overflow: hidden;}
-.des_btn{ width:100%; position:absolute; left:35%; top:6%;}
-.des_btn input{ padding:10px 20px; border-radius:8px; outline:none; color:#fff; background:#96F; font-size:20px;}
-
-.des_box{ width: 700px;height: 400px;overflow:hidden;margin:160px auto;position:relative;}
-.des_con{ height: 400px; position: absolute;left: 0; top:0;  width: 2800px;}
-.des_con li{width:700px; height:100%; float: left;}
-
-
-#con{width:1200px;height:500px;overflow:hidden;margin:100px auto;position:relative;}
+*{margin:0px;padding:0px;list-style:none;}
+body{background:url(img/page.png) no-repeat;width:100%;height:100%;overflow:hidden;background-size:cover;}
+/*选项卡*/
+#ul_btn{width:406px;height:40px;margin:5px auto;}
+#ul_btn li{width:100px;background:#339999;height:40px;line-height:40px;color:#fff;margin:0px 10px;text-align:center;float:left;cursor:pointer;}
+#con{width:1200px;height:500px;overflow:hidden;margin:50px auto;position:relative;}
 #ol_con{width:3600px;height:500px;position:absolute;left:0px;top:0px;}
 #ol_con li{float:left;}
 /*爆炸*/
@@ -39,13 +34,13 @@ body{ background:url(img/back.jpg) no-repeat;overflow: hidden;}
 <script>
 window.onload=function(){
 	//选项卡
-	var oUl_btn=document.getElementById('des_btn');
-	var oInp=oUl_btn.getElementsByTagName('input');
+	var oUl_btn=document.getElementById('ul_btn');
+	var oLi=oUl_btn.getElementsByTagName('li');
 	var oOl_con=document.getElementById('ol_con');
 	
-	for(var i=0;i<oInp.length;i++){
-		oInp[i].index=i;
-		oInp[i].onclick=function(){
+	for(var i=0;i<oLi.length;i++){
+		oLi[i].index=i;
+		oLi[i].onclick=function(){
 			var a=this.index;
 		
 			move(oOl_con,{left:-a*1200+'px'})
@@ -88,7 +83,7 @@ window.onload=function(){
 			}
 			
 		};
-		function Nubone(){
+		oSpan[0].addEventListener('transitionend',function(){
 			flag=true;
 			for(var i=0;i<oSpan.length;i++)
 			{
@@ -97,10 +92,9 @@ window.onload=function(){
 				oSpan[i].style.opacity=1;
 				oSpan[i].style.backgroundImage='url(img/'+n%3+'.jpg)';//**
 				oDiv.style.background='url(img/'+(n+1)%3+'.jpg)';
-			};
-			oSpan[0].removeEventListener('transitionend',Nubone,false);
-		}
-		oSpan[0].addEventListener('transitionend',Nubone,false);
+			}
+			
+		},false);
 		function rnd(n,m)
 		{
 			return parseInt(Math.random()*(m-n)+n);
@@ -113,6 +107,7 @@ window.onload=function(){
 		var oPage2=document.getElementById('page2');
 		var oFornt=document.getElementById('front');
 		var oBack=document.getElementById('back');
+		var oPage
 		var n=0;
 		var flag=true;
 		oDiv.onclick=function(){
@@ -122,8 +117,7 @@ window.onload=function(){
 			oPage1.style.transition='1s all ease';
 			oPage1.style.transform='perspective(800px) rotateY(-180deg)';
 		};
-
-		function chang(){
+		oPage1.addEventListener('transitionend',function(){
 			flag=true;
 			oPage1.style.transition='none';
 			oPage1.style.transform='perspective(800px) rotateY(0deg)';
@@ -131,9 +125,7 @@ window.onload=function(){
 			oBack.style.backgroundImage='url(img/'+(n+1)%3+'.jpg)';
 			oPage2.style.backgroundImage='url(img/'+(n+1)%3+'.jpg)';
 			oDiv.style.backgroundImage='url(img/'+n%3+'.jpg)';
-			oPage1.removeEventListener('transitionend',chang,false);
-		}
-		oPage1.addEventListener('transitionend',chang,false);
+		},false);
 	})();
 	//块运动
 	(function(){
@@ -181,7 +173,7 @@ window.onload=function(){
 			}
 			
 			//
-			function last(){
+			aSpan[aSpan.length-1].addEventListener('transitionend',function(){
 				bReady=true;
 				for(var i=0; i<aSpan.length; i++){
 					aSpan[i].style.transition='none';
@@ -189,39 +181,38 @@ window.onload=function(){
 					aSpan[i].children[0].style.backgroundImage='url(img/'+iNow%3+'.jpg)';
 					aSpan[i].children[1].style.backgroundImage='url(img/'+(iNow+1)%3+'.jpg)';
 				}
-				aSpan[aSpan.length-1].removeEventListener('transitionend',last,false);
-			}
-			aSpan[aSpan.length-1].addEventListener('transitionend',last,false);
+			},false);
 		};
 	})();
 	
 };
 </script>
 </head>
+
 <body>
-	<div class="des_btn" id="des_btn">
-        <input type="button" value="爆炸运动" id="fy" />
-        <input type="button" value="翻页运动" id="bz"/>
-        <input type="button" value="颗粒运动" id="kl" />
-    </div>
-	<div id="con">
-		<ol id="ol_con">
-			<li>
-				<div id="b_div1"></div>
-			</li>
-			<li>
-				<div id="f_div1">
-					<div id="page1">
-				    	<div id="front"></div>
-				        <div id="back"></div>
-				    </div>
-				    <div id="page2"></div>
-				</div>
-			</li>
-			<li>
-				<div id="box"></div>
-			</li>
-		</ol>
-	</div>
+<ul id="ul_btn">
+	<li>爆炸效果</li>
+	<li>翻页效果</li>
+	<li>块变化</li>
+</ul>
+<div id="con">
+	<ol id="ol_con">
+		<li>
+			<div id="b_div1"></div>
+		</li>
+		<li>
+			<div id="f_div1">
+				<div id="page1">
+			    	<div id="front"></div>
+			        <div id="back"></div>
+			    </div>
+			    <div id="page2"></div>
+			</div>
+		</li>
+		<li>
+			<div id="box"></div>
+		</li>
+	</ol>
+</div>
 </body>
 </html>
